# docs-capacitor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  extension-vsix.yml  freshness-check.yml
capacitor/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  scenario_schema.py
capacitor/classifiers/: __init__.py  topic_rules.py
capacitor/collectors/: __init__.py  github_search.py  learn_api.py  learn_internal.py  local_files.py
capacitor/detectors/: base.py  llm_detector.py  regex.py
capacitor/reporters/: __init__.py  base.py  csv_report.py  json_report.py  markdown.py
capacitor/utils/: finding_schema.py  release_notes.py
extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extension/python-src/: README.md  pyproject.toml
extension/python-src/capacitor/: __init__.py  pipeline.py  scenario_schema.py
extension/python-src/capacitor/classifiers/: base.py
extension/python-src/capacitor/collectors/: __init__.py  base.py  github_search.py  learn_api.py
extension/python-src/capacitor/detectors/: __init__.py
extension/python-src/capacitor/reporters/: __init__.py  csv_report.py
extension/python-src/capacitor/utils/: page_schema.py
extension/scripts/: prepare-python-runtime.js
extension/src/: extension.ts  resultsPanel.ts  resultsProvider.ts  runner.ts  runtimeBootstrap.ts  (+5 more)
output/: release_notes_snapshot.json  report.csv  report.md
tests/: test_azure_cli_scenario.py  test_github_repo_variant_filter.py  test_github_search_rate_limit.py  test_llm_detector.py  test_smoke.py
(+24 files in other folders)
